第一个方块

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.examplemod.ruby":"Ruby"
+  "item.examplemod.ruby":"Ruby",
+  "creativetab.example_tab": "haohao",
+  "block.examplemod.ruby_block": "redBlock"
 }
