--- a/src/main/resources/assets/examplemod/lang/zh_cn.json
+++ b/src/main/resources/assets/examplemod/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
   "item.examplemod.ruby":"红宝石",
-  "creativetab.example_tab": "浩浩"
+  "creativetab.example_tab": "浩浩",
+  "block.examplemod.ruby_block": "红宝石方块"
 }
